--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: yu123456
-    url: jdbc:mysql://localhost:3306/java2206?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/zuopin?serverTimezone=UTC
   thymeleaf:
     prefix: classpath:\templates\pages\
     suffix: .html
